--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://kubajot90.github.io/Youtube_React"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
